--- a/src/components/ProTabulator.less
+++ b/src/components/ProTabulator.less
@@ -8,7 +8,7 @@
 }
 
 .@{ant-prefix} {
-    &-pro-table {
+    & &-pro-table {
         height: 100%;
         &-list-toolbar-container {
             padding-top: 0;
@@ -47,7 +47,7 @@
             }
         }
     }
-    &-table {
+    & &-table {
         & &-thead > tr > th&-cell {
             padding: 0px;
         }
@@ -87,10 +87,10 @@
             }
         }
     }
-    &-pro-card-body {
+    & &-pro-card-body {
         padding: 0;
     }
-    &-table-pagination&-pagination {
+    & &-table-pagination&-pagination {
         margin-bottom: 0;
     }
     &-filter {
@@ -137,7 +137,7 @@
         color: rgba(0, 0, 0, 0.25);
     }
 
-    &-select-selection-overflow {
+    & &-select-selection-overflow {
         flex-wrap: nowrap;
         overflow-x: overlay;
         overflow-y: hidden;
