--- a/src/components/ProTabulator.less
+++ b/src/components/ProTabulator.less
@@ -46,47 +46,47 @@
                 }
             }
         }
-    }
-    &-pro-table &-table {
-        & &-thead > tr > th&-cell {
-            padding: 0px;
+        .@{ant-prefix}-table {
+            .@{ant-prefix}-table-thead > tr > th.@{ant-prefix}-table-cell {
+                padding: 0px;
+            }
+            &-column-sorter {
+                position: absolute;
+                top: 10px;
+                right: 8px;
+            }
+            &-body {
+                &::-webkit-scrollbar {
+                    height: 8px;
+                    width: 8px;
+                }
+    
+                &::-webkit-scrollbar-track {
+                    border-right: 1px solid #f0f0f0;
+                    border-bottom: 1px solid #f0f0f0;
+                    box-shadow: none;
+                    background-color: #fafafa;
+                    border-radius: 0;
+                    // border-radius: 10px;
+                }
+    
+                &::-webkit-scrollbar-thumb {
+                    border-radius: 0;
+                    box-shadow: none;
+                    background-color: #bfbfbf;
+                    border-right: 1px solid #f0f0f0;
+                    border-bottom: 1px solid #f0f0f0;
+                    // box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
+                }
+                &::-webkit-scrollbar-corner {
+                    border-right: 1px solid #f0f0f0;
+                    border-bottom: 1px solid #f0f0f0;
+                    background-color: #fafafa;
+                    // box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
+                }
+            }
         }
-        &-column-sorter {
-            position: absolute;
-            top: 10px;
-            right: 8px;
-        }
-        &-body {
-            &::-webkit-scrollbar {
-                height: 8px;
-                width: 8px;
-            }
-
-            &::-webkit-scrollbar-track {
-                border-right: 1px solid #f0f0f0;
-                border-bottom: 1px solid #f0f0f0;
-                box-shadow: none;
-                background-color: #fafafa;
-                border-radius: 0;
-                // border-radius: 10px;
-            }
-
-            &::-webkit-scrollbar-thumb {
-                border-radius: 0;
-                box-shadow: none;
-                background-color: #bfbfbf;
-                border-right: 1px solid #f0f0f0;
-                border-bottom: 1px solid #f0f0f0;
-                // box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
-            }
-            &::-webkit-scrollbar-corner {
-                border-right: 1px solid #f0f0f0;
-                border-bottom: 1px solid #f0f0f0;
-                background-color: #fafafa;
-                // box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
-            }
-        }
-    }
+    }    
     &-pro-table &-pro-card-body {
         padding: 0;
     }
