--- a/src/components/ProTabulator/ProTabulator.less
+++ b/src/components/ProTabulator/ProTabulator.less
@@ -1,4 +1,4 @@
-@import './styles/antd.css';
+@import '../../styles/antd.css';
 @import '~@ant-design/pro-table/dist/table.less';
 
 // @primary-color: var(--tabulator-primary-color);
