--- a/src/pro-tabulator.css
+++ b/src/pro-tabulator.css
@@ -1,55 +1,55 @@
-.tabulator-pro-table {
+.pro-tabulator-pro-table {
     display: flex;
     flex-direction: column;
     row-gap: 10px;
 }
 
-.tabulator-table-wrapper {
+.pro-tabulator-table-wrapper {
     flex: 1;
     min-height: 0;
 }
 
-.tabulator-table-body {
+.pro-tabulator-table-body {
     min-height: 0;
     overflow-y: auto;
 }
 
-.tabulator-pro-table-list-toolbar-container {
+.pro-tabulator-pro-table-list-toolbar-container {
     column-gap: 10px;
     flex-direction: row !important;
     padding-block: 0 !important;
 }
 
-.tabulator-pro-table-list-toolbar-left {
+.pro-tabulator-pro-table-list-toolbar-left {
     margin-block-end: 0 !important;
 }
 
-.tabulator-pro-table-list-toolbar-right {
+.pro-tabulator-pro-table-list-toolbar-right {
     flex-wrap: nowrap !important;
     flex: 1;
     min-width: 0;
 }
 
-.tabulator-pro-table-list-toolbar-filter {
+.pro-tabulator-pro-table-list-toolbar-filter {
     margin-inline-end: auto !important;
     overflow-x: auto;
     overflow-y: hidden;
 }
 
-.tabulator-pro-form-light-filter-container {
+.pro-tabulator-pro-form-light-filter-container {
     flex-wrap: nowrap !important;
 }
 
-.pro-tabulator .tabulator-table-wrapper .tabulator-table-thead > tr > th,
-.pro-tabulator .tabulator-table-wrapper .tabulator-table-thead > tr > td {
+.pro-tabulator .pro-tabulator-table-wrapper .pro-tabulator-table-thead > tr > th,
+.pro-tabulator .pro-tabulator-table-wrapper .pro-tabulator-table-thead > tr > td {
     font-weight: normal;
 }
 
-.pro-tabulator .tabulator-table-wrapper .tabulator-table-pagination.tabulator-pagination {
+.pro-tabulator .pro-tabulator-table-wrapper .pro-tabulator-table-pagination.pro-tabulator-pagination {
     margin: 16px 0 0;
 }
 
-.tabulator-pro {
+.pro-tabulator-pro {
     height: 100%;
 }
 
@@ -57,13 +57,13 @@
     height: 100%;
 }
 
-.tabulator-pro-table-list-toolbar-setting-item {
+.pro-tabulator-pro-table-list-toolbar-setting-item {
     margin-block: 0;
     margin-inline: 4px;
     color: rgba(0, 0, 0, 0.88);
     font-size: 16px;
     cursor: pointer;
 }
-.tabulator-pro-table-list-toolbar-setting-item:hover {
+.pro-tabulator-pro-table-list-toolbar-setting-item:hover {
     color: #1677ff;
 }
