manualCreate fix & style fix

--- a/src/pro-tabulator.css
+++ b/src/pro-tabulator.css
@@ -101,7 +101,7 @@
 }
 
 .pro-tabulator-pro-table-alert .pro-tabulator-pro-table-alert-container {
-    padding: 14px;
+    padding: 5px 14px;
 }
 
 .pro-tabulator-pro-table-alert .pro-tabulator-btn {
